Added links to login and register

--- a/questions/templates/index.html
+++ b/questions/templates/index.html
@@ -1,3 +1,14 @@
 <html>
-<h1 style="text-align: center;">Welcome to the Quiz Generator!</h1>
+    <h1 style="text-align: center;">Welcome to the Quiz Generator!</h1>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <a href="login.html"><p style="text-align: center;">Login</p></a>
+    <a href="register.html"><p style="text-align: center;">Register</p></a>
+
 </html>
