--- a/questions/templates/dashboard.html
+++ b/questions/templates/dashboard.html
@@ -5,6 +5,6 @@
     <li>
 
     </li>
-    <input type="text" placeholder="course name">
-    <button>Add Course</button>
+    <input type="text" placeholder="question">
+    <button>Add question</button>
 </html>
