Added button to create a course

--- a/questions/templates/dashboard.html
+++ b/questions/templates/dashboard.html
@@ -2,9 +2,15 @@
     <h1 style="text-align: center;">Your Courses</h1>
     <br />
     <br />
-    <li>
+    <li> </li>
 
-    </li>
-    <input type="text" placeholder="question">
-    <button>Add question</button>
+    <br />
+    <input type="text" placeholder="New Course">
+    <button>Add Course</button>
+
+    <br/>
+    <br/>
+
+    <input type="text" placeholder="New Question">
+    <button>Add Question</button>
 </html>
