--- a/questions/templates/index.html
+++ b/questions/templates/index.html
@@ -9,6 +9,6 @@
     <br />
 
     <a href="login.html"><p style="text-align: center;">Login</p></a>
-    <a href="register.html"><p style="text-align: center;">Register</p></a>
+    <a href="register"><p style="text-align: center;">Register</p></a>
 
 </html>
