Added user registration

--- a/questions/templates/index.html
+++ b/questions/templates/index.html
@@ -8,7 +8,7 @@
     <br />
     <br />
 
-    <a href="login.html"><p style="text-align: center;">Login</p></a>
+    <a href="registration/login"><p style="text-align: center;">Login</p></a>
     <a href="register"><p style="text-align: center;">Register</p></a>
 
 </html>
