--- a/questions/templates/courses.html
+++ b/questions/templates/courses.html
@@ -7,7 +7,7 @@
     <div id='courses'>
         {% for course in courses %}
         <div id=course-container>
-            <h2>{{course.title}} </h2>
+            <h2><a href="courses/{{ course.pk }}">{{course.title}} </a></h2>
             <h3>modules: {{ course.num_of_modules }}</h3>
         </div>
         {% endfor %}
