--- a/questions/static/questions/courses.css
+++ b/questions/static/questions/courses.css
@@ -8,19 +8,28 @@ h1 {
     font-size: xx-large; 
 }
 
-#courses{
+.models{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-#course-container {
+.model-container{
+    text-align: center;
     width: 200px;
     height: 200px;
     border: 1px solid black;
     margin: 15px;
+}
+
+.new-model {
+    font-size: 60px;
     text-align: center;
-    
+    line-height: 200px;
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    margin: 15px;
 }
 
 label{
