--- a/questions/templates/registration/login.html
+++ b/questions/templates/registration/login.html
@@ -4,7 +4,7 @@
         
         {{ form.as_p }}
 
-        <input type="submit" value="Register">
+        <input type="submit" value="login">
     </form>
 
 </html>
