started on creating a module

--- a/questions/templates/course_details.html
+++ b/questions/templates/course_details.html
@@ -14,11 +14,19 @@
             {% endfor %}
         </div>
         {% endfor %}
-        <button class="new-model">
+        <button class="new-model" onclick="createModule()">
             <span>+</span>
         </button>
     </div>
     
     <br />
     <br/>
+
+    <script>
+
+        function createModule(){
+            
+        }
+
+    </script>
 </html>
