Updates to UI and syntax

--- a/questions/templates/course_details.html
+++ b/questions/templates/course_details.html
@@ -1,7 +1,7 @@
 <html>
     {% load static %}
     <link rel="stylesheet" href="{% static 'questions/courses.css' %}">
-    <h1>modules</h1>
+    <h1>Modules</h1>
     <br />
     <br />
     <div class='models'>
