--- a/questions/templates/course_details.html
+++ b/questions/templates/course_details.html
@@ -14,19 +14,11 @@
             {% endfor %}
         </div>
         {% endfor %}
-        <button class="new-model" onclick="createModule()">
-            <span>+</span>
-        </button>
+        <a href="/courses/{{course_id}}/create_module" class="new-model" >
+            +
+        </a>
     </div>
     
     <br />
     <br/>
-
-    <script>
-
-        function createModule(){
-            
-        }
-
-    </script>
 </html>
