--- a/questions/templates/create_module.html
+++ b/questions/templates/create_module.html
@@ -2,7 +2,7 @@
     {% load static %}
     <h1>Create a module</h1>
     <br />
-    <form action="/modules" method="POST">
+    <form action="/courses/{{course_id}}/create_module" method="POST">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="create">
